gracias ajuste texto

--- a/public/gracias/index.html
+++ b/public/gracias/index.html
@@ -97,22 +97,22 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-12">
 					<!-- <h4 class="text-white mb-4 text-shadow">¡Gracias!</h4>	 -->
-					<h2 class="marian text-white" style="font-size: 27px;">¡Gracias!</h2>
+					<h2 class="marian text-white" style="font-size: 27px;">¡Gracias por sumarte!</h2>
 					<img src="images/separador-blanco.svg" class="mb-4" alt="">
 					
-					<h4 class="text-white mb-1 text-shadow">Pasos a seguir :</h4>	
+					<h4 class="text-white mb-1 text-shadow">Pasos a seguir:</h4>	
 					<p>						
-						1- Sumate al grupo de Telegram para estar al tanto de las novedades, recibir el link de acceso y un súper bonus de regalo.  <br>
-						2- Atenti a tu correo. <br>
-						3- Si tenés alguna duda, te espero en contacto@marianpd.com para poder ayudarte. 		
+						1- En las próximas horas recibirás un correo de bienvenida con los pasos a seguir para obtener el link de acceso al encuentro, estate atenta.  <br>
+						2- Agendá el Entrenamiento en Vivo el día sábado 21/08 a las 10.30 hs. (arg). <br>
+						3- Si tenes alguna duda podes contactarte a soporte@marianpd.com 		
 					</p>
 					<p>
-						¡Nos vemos pronto! <br>
+						¡Nos vemos pronto, en vivo y con cafecito en mano! <br>
 						Saluditos. <br>	
 						Marian					
 					</p>
-					<a href="https://t.me/joinchat/qcG3FWCpCxA1Yjg5" class="btn btn-lg btn-primary space20 page-scroll mt-4">INGRESAR AL GRUPO DE TELEGRAM</a>
-					<p>(Si todavía no descargaste la App de Telegram en tu celular, podés hacerlo <a href="https://play.google.com/store/apps/details?id=org.telegram.messenger&hl=es_AR&gl=US" style="color: white;text-decoration: underline;" target="_blank">ACÁ</a>)</p>
+					<!-- <a href="https://t.me/joinchat/qcG3FWCpCxA1Yjg5" class="btn btn-lg btn-primary space20 page-scroll mt-4">INGRESAR AL GRUPO DE TELEGRAM</a>
+					<p>(Si todavía no descargaste la App de Telegram en tu celular, podés hacerlo <a href="https://play.google.com/store/apps/details?id=org.telegram.messenger&hl=es_AR&gl=US" style="color: white;text-decoration: underline;" target="_blank">ACÁ</a>)</p> -->
 					<!-- <img style="width: 200px;" src="images/Logo-Marian-Blanco.png" alt=""> -->
 					
 
