conversion pixel facebook gracias

--- a/public/gracias/index.html
+++ b/public/gracias/index.html
@@ -53,6 +53,9 @@
 	src="https://www.facebook.com/tr?id=3207452602639019&ev=PageView&noscript=1"
   /></noscript>
   <!-- End Facebook Pixel Code -->
+  <script>
+	fbq('track', 'CompleteRegistration');
+</script>
 		
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-167872006-1"></script>
