gracias generica eventos

--- a/public/gracias/index.html
+++ b/public/gracias/index.html
@@ -106,7 +106,7 @@
 					<h4 class="text-white mb-1 text-shadow">Pasos a seguir:</h4>	
 					<p>						
 						1- En las próximas horas recibirás un correo de bienvenida con los pasos a seguir para obtener el link de acceso al encuentro, estate atenta.  <br>
-						2- Agendá el Entrenamiento en Vivo el día sábado 21/08 a las 10.30 hs. (arg). <br>
+						<!-- 2- Agendá el Entrenamiento en Vivo el día sábado 21/08 a las 10.30 hs. (arg). <br> -->
 						3- Si tenes alguna duda podes contactarte a soporte@marianpd.com 		
 					</p>
 					<p>
